fix(slider): fix drag wrap initial activation + no links pointer events none on active

--- a/src/core/link/link-setup.less
+++ b/src/core/link/link-setup.less
@@ -9,11 +9,3 @@ a, .btn--link {
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
-
-// link active (xt-ajax)
-
-a[href]:not([href^='#']) {
-  &.active {
-    pointer-events: none;
-  }
-}
